# saas-retention-command-center

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  artifact.json  dashboard.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.impeccable/: design.json
.impeccable/surfaces/: dashboard-html.md
data/processed/: channel_health.csv  cohort_retention.csv  headline_kpis.csv  monthly_trend.csv  risk_segments.csv  segment_health.csv
data/raw/: accounts.csv  product_events.csv  subscription_monthly.csv
docs/: chart_map.md  metric_dictionary.md  validation.md
outputs/: validation_summary.json
scripts/: spot_check.py
sql/: analysis.sql
src/saas_retention/: __init__.py  dashboard.py  dashboard_template.html  generate_data.py  pipeline.py
tests/: test_pipeline.py
