[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-retention-command-center"
version = "0.1.0"
description = "A reproducible SQL and dashboard portfolio project for SaaS retention analytics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
retention-analysis = "saas_retention.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

